<resources>
    <string name="app_name">Hiccs Arish</string>

    <string name="title_activity_image_details">GalleryDetailsActivity</string>
    <string name="list_item_news_image_content_description">News Image</string>
    <string name="list_item_news_title_label">News Title</string>
    <string name="list_item_table_course_name_label">Course</string>
    <string name="list_item_table_course_prof_name_label">Prof. Name</string>
    <string name="list_item_table_course_duration_label">Dura : tion</string>
    <string name="list_item_table_day_label">Day</string>


    <string name="hicss_full_name">المعهد العالي للعلوم التجارية والحاسب الآلي</string>
    <string name="granted_degrees_title">الدرجات الممنوحة</string>

    <string name="granted_degrees"> درجه البكالوريوس في التجاره تخصص.
        (نظم معلومات إدارية )        \n

• درجه البكالوريوس في التجاره تخصص.
    (محاسبه )        \n

• درجه البكالوريوس ف التجارة تخصص.
                \n
(إدارة الأعمال )</string>
    <string name="creation_title">النشأة</string>

    <string name="creation">أنشئ المعهد العالي للعلوم التجارية والحاسب الآلي بالقرار الوزاري
رقم 840 في 9/6/2002 المعهد معادل لدرجه بكالوريوس تجارة
التي تمنحها الجامعات المصرية بالقرار الوزارى رقم 75 بتاريخ
17/5/2007 وذلك في جميع التخصصات بالمعهد
    </string>
    <string name="departments_title">الشعبة</string>

    <string name="departments"> شعبه نظم المعلومات الإدارية والحاسب ألي.        \n

• شعبه المعلومات التجارية والتخصص فيها يبدأ من الفرقة الرابعة في إحدى التخصص
في إحدى التخصص (محاسبه -وإدارة اعمال)
    </string>

    <string name="duration_of_study_title">فترة         \nالدراسة</string>

    <string name="duration_of_study">• مدة الدراسة ف المعهد 4 سنوات دراسية.
    </string>
    <string name="admission_requirements_title">القبول        \n في        \n المعهد</string>

    <string name="admission_requirements">
• المعهد يقبل المؤهلات التالية:.
        \n
1-الثانويه العامه والأزهر بشعبه.
        \n
2-الثانويه الصناعية 3، 5 سنوات.
        \n
3-الثانوية التجارية 3، 5 سنوات.
        \n
4- المعهد الفنية التجارية يقبل بالفرقة الثانية.
        \n
5-المعاهد الفنية الصناعية.
        \n
• يتم قبول الطلاب بالمعهد من أبناء جمهورية  مصر العربيه عن طريق
• مكتب التنسيق ويكون قبول طلاب من غير أبناء جمهوريه مصر العربيه عن طريق إدارة بوزارة التعليم العالي.
• يقبل المعهد التحويلات من جميع المعاهد والجامعات الخاصة والحكومية.

    </string>
    <string name="goals_title">اهداف         \nالمعهد</string>

    <string name="goals">-بناء شخصية قادرة علي أتخاذ القرار.
2-تخصص التنمية الشاملة.
3-العداد جيل مسئول من الشباب .
4 -الإسهام في إقامة مجتمع منتج.
*الأنشطة الطلابية.
• يهتم المعهد برعاية الأنشطة الطلابية واتاحه الفرص أمام الطلاب لممارسة هوياتهم المختلفه.
• يهتم المعهد بالحفلات والمسابقات الرياضية.
• يهتم المعهد بالندوات والمسابقات الثقافية والدينيه.
• يهتم المعهد بالانشطه المختلفة مثل الموسيقي والرسم والغناء الجتماعي والفنون الشعبة والمسرح والفنون التشكيلية.
*المكتبة الأكاديمية بالمعهد.
• تقدم المكتبات دورا فعال في بناء شخصيات من خلال قدرات
متعددة لكبار الادباء والعلماء لذلك يوفر المعهد للطلاب الاطلاع علي مراجع علمية وثقافية مختلفه وسهل للطلاب للبحث ف المراجع.
    </string>
    <string name="address_title">الفروع</string>

    <string name="address">جمهوريه مصر العربيه  محافظة شمال سيناء العريش ضاحية الجيش
خلف مديرية التربية والتعليم.
    مقر مبني رقم 1المجمع التعليمى بمدينة الإسماعيلية
• بجوار معسكر عزالدين اول طرق مصر اسماعليه
    </string>

    <string name="branches">2</string>
    <string name="connection_info_title">للتواصل</string>

    <string name="connection_info">
E-mail:m-saihizoo@hotmail.com
ت/ 0683327605_0683327604
فاكس / 0683326604</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="professors">أساتذة</string>
    <string name="assistants">أساتذة مساعدين</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="student_label">تسجيل دخول الطالب</string>
    <string name="visitors_features_label">Other Features</string>
    <string name="visitors_feature_staff_label">أعضاء هيئة التدريس</string>
    <string name="visitors_feature_gallery_label">معرض الصور</string>
    <string name="visitors_feature_about_label">نبذة مختصرة</string>
    <string name="visitors_feature_news_label">جريدة المعهد</string>
    <string name="visitors_feature_extra_courses_label">دورات تدريبة</string>
    <string name="news_toolbar_title">جريدة المعهد</string>
    <string name="extra_courses_toolbar_title">دورات تدريبة</string>
    <string name="student_grades_toolbar_title">نتيجة الطالب</string>

    <string name="image_courses_transition">extra_courses-image-transition</string>


    <string name="studentProfile">معلومات الطالب</string>
    <string name="contactMail">البريد</string>
    <string name="coursesTable">جدول المحاضرات</string>
    <string name="lastExams">إمتحانات سابقة</string>
    <string name="suggest">اقترح</string>
    <string name="studentGrades">النتيجة</string>


    <string name="image_news_transition">news-image-transition</string>
    <string name="news_body_label">This is a body</string>
    <string name="share_article_text">Share</string>
    <string name="activity_launch_error_msg">Error Occurred</string>
    <string name="student_login_label">تسجيل الدخول </string>
    <string name="extra_courses_shared_transition_name">extra-courses-image</string>
    <string name="staff_image_shared_transition">staff-image-transition</string>
    <string name="suggest_edit_text_hint">Suggest</string>
    <string name="submit_suggest_button_label">إقترح</string>
    <string name="student_profile_image_background_content_description">Student Image</string>
    <string name="student_profile_name_label">name:</string>
    <string name="student_profile_address_label">address:</string>
    <string name="student_profile_phone_label">phone:</string>
    <string name="student_profile_department_label">department:</string>
    <string name="student_profile_year_label">exams:</string>
    <string name="dialog_image_content_description">Suggest posted successfully</string>
    <string name="dialog_button_text">Hooray!</string>
    <string name="dialog_message_text">Thanks for reaching. your suggestions are highly appreciated!</string>


</resources>