<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:stateListAnimator="@animator/left_on_touch"
    app:cardCornerRadius="@dimen/dialog_parent_corner_radius"
    app:cardElevation="@dimen/dialog_parent_corner_elevation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/dialogSuggestSuccessDialogImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_image_height"
            android:contentDescription="@string/dialog_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dialogSuggestSuccessDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_button_margin"
            android:background="@drawable/colored_button_background"
            android:text="@string/dialog_button_text"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/suggestMessageDialogTextView" />

        <TextView
            android:id="@+id/suggestMessageDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_message_margin"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center"
            android:text="@string/dialog_message_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogSuggestSuccessDialogImage" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
